- library:
  o fix leaving read locks on rpmdb (mga#9248)

Version 7.24 - 18 April 2013, by Thierry Vignaud

- library:
  o display exceptions that happened while downloading (mga#9529)
- urpmi:
  o fix package count when a package has a %pretrans scriptlet

Version 7.23 - 21 March 2013, by Thierry Vignaud

- library:
  o enable to report packages signature checking in global progress bar dialog
- gurpmi2:
  o improved layout:
    * only the package list needs a scrolling bar
    * always display space information
  o display the addionnal space that will be used and the amount of downloaded
    packages instead of the total size of the packages (like urpmi)
  o fix return value (mga#9519)
  o report packages signature checking in global progress bar dialog

Version 7.22 - 21 March 2013, by Thierry Vignaud

- library:
  o account for packages to erase in gurpm progress bar
  o enable to have a cancel button in global progress bar dialog
- gurpmi2:
  o enable to cancel downloads
  o fix setting download callback

Version 7.21 - 21 March 2013, by Thierry Vignaud

- library:
  o restore main_window when global progress bar dialog is deleted

Version 7.20 - 19 March 2013, by Thierry Vignaud

- library:
  o drop 'callback_report_uninst' now that 'callback_uninst' enables to get
    erasure progress
  o enable rpmdrake/gurpm/drakx to pass their own callbacks for erasure
    progress & errors
  o enhanced doc
  o revert 'fixing (g)urpmi --auto-select --update defaulting to all media when
    there're no update media (#1024)' as it break looking for deps in other media
    with --update (mga#2317)
- gurpmi:
  o split global progress bar widget for rpmdrake (mga#778)
  o show removed packages in progress too
  o support exceptions in callback in main wrapper too
  o support other distros which do not handle exceptions in gtk+ callbacks
  o use new exception management

Version 7.19 - 9 February 2013, by Thierry Vignaud

- add basic support for --downgrade (mga#6655)
