@@ -1,4 +1,5 @@
 - library:
+  o enable rpmdrake to not use modal dialogs (mga#9646)
   o fix leaving read locks on rpmdb (mga#9248)
 
 Version 7.24 - 18 April 2013, by Thierry Vignaud
